--- a/phpBB/adm/style/acp_logs.html
+++ b/phpBB/adm/style/acp_logs.html
@@ -9,7 +9,7 @@
 <form id="list" method="post" action="{U_ACTION}">
 
 <fieldset class="display-options" style="float: left">
-	{L_SELECT_LANG_KEY}: <select name="log_operation">{S_LANG_KEYS}</select>&nbsp;<input type="submit" class="button2" name="filter" value="{L_FILTER}" />
+	{L_SEARCH_KEYWORDS}: <input type="text" name="keywords" value="{S_KEYWORDS}" />&nbsp;<input type="submit" class="button2" name="filter" value="{L_SEARCH}" />
 </fieldset>
 
 <!-- IF PAGINATION -->
