#52095 Authorised by: AcydBurn That should finally fix the issue for rtl
git-svn-id: file:///svn/phpbb/branches/phpBB-3_0_0@10194 89ea8834-ac86-4346-8a33-228a782c2dd0

--- a/phpBB/adm/style/captcha_recaptcha.html
+++ b/phpBB/adm/style/captcha_recaptcha.html
@@ -8,7 +8,7 @@
 		};
 		// ]]>
 		</script>
-		<script type="text/javascript" src="{RECAPTCHA_SERVER}/challenge?k={RECAPTCHA_PUBKEY}{RECAPTCHA_ERRORGET}" />
+		<script type="text/javascript" src="{RECAPTCHA_SERVER}/challenge?k={RECAPTCHA_PUBKEY}{RECAPTCHA_ERRORGET}"></script>
 		<script type="text/javascript">
 		// <![CDATA[
 		<!-- IF S_CONTENT_DIRECTION eq 'rtl' -->
