--- a/phpBB/adm/style/overall_footer.html
+++ b/phpBB/adm/style/overall_footer.html
@@ -20,7 +20,7 @@
 	
 	<div id="page-footer">
 		<!-- IF S_COPYRIGHT_HTML -->
-			Powered by phpBB &copy; 2000, 2002, 2005, 2007 <a href="http://www.phpbb.com/">phpBB Group</a>
+			Powered by <a href="http://www.phpbb.com/">phpBB</a> &copy; phpBB Group
 			<!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
 		<!-- ENDIF -->
 
