--- a/phpBB/adm/style/acp_attachments.html
+++ b/phpBB/adm/style/acp_attachments.html
@@ -371,6 +371,74 @@
 	</fieldset>
 	</form>
 
+<!-- ELSEIF S_ATTACHMENTS -->
+
+	<form id="attachments" method="post" action="{U_ACTION}">
+
+	<fieldset class="tabulated">
+	<legend>{L_TITLE}</legend>
+
+	<!-- IF PAGINATION  or TOTAL_FILES -->
+	<div class="pagination">
+		{L_NUMBER_FILES}: {TOTAL_FILES} &bull; {L_TOTAL_SIZE}: {TOTAL_SIZE}<!-- IF S_ON_PAGE --><!-- IF PAGINATION --> &bull; <a href="#" onclick="jumpto(); return false;" title="{L_JUMP_TO_PAGE}">{S_ON_PAGE}</a> &bull; <span>{PAGINATION}</span><!-- ELSE --> &bull; {S_ON_PAGE}<!-- ENDIF --><!-- ENDIF -->
+	</div>
+	<!-- ENDIF -->
+
+	<table cellspacing="1">
+	<thead>
+	<tr>
+		<th>{L_FILENAME}</th>
+		<th>{L_FILEDATE}</th>
+		<th>{L_FILESIZE}</th>
+		<th>{L_ATTACH_POST_ID}</th>
+		<th>{L_DELETE}</th>
+	</tr>
+	</thead>
+	<tbody>
+	<!-- BEGIN attachments -->
+		<!-- IF attachments.S_ROW_COUNT is even --><tr class="row1"><!-- ELSE --><tr class="row2"><!-- ENDIF -->
+			<td><a href="{attachments.U_FILE}" style="font-weight: bold;">{attachments.REAL_FILENAME}</a><br />{attachments.L_DOWNLOAD_COUNT}<br /><!-- IF attachments.S_IN_MESSAGE -->{L_IN} {L_PRIVATE_MESSAGE}<!-- ELSE -->{L_TOPIC}: <!-- ENDIF --><a href="{attachments.U_VIEW_TOPIC}">{attachments.TOPIC_TITLE}</a></td>
+			<td>{attachments.FILETIME}<br />{L_POST_BY_AUTHOR} {attachments.ATTACHMENT_POSTER}</td>
+			<td>{attachments.FILESIZE}</td>
+			<td>
+				<input type="text" name="post_id[{attachments.ATTACH_ID}]" size="7" maxlength="10" value="{attachments.POST_ID}" {attachments.DISABLED} />
+				<input type="hidden" name="current_post_id[{attachments.ATTACH_ID}]" value="{attachments.POST_ID}" />
+				<input type="hidden" name="current_topic_id[{attachments.ATTACH_ID}]" value="{attachments.TOPIC_ID}" />
+			</td>
+			<td><input type="checkbox" class="radio" name="delete[{attachments.ATTACH_ID}]" /></td>
+		</tr>
+	<!-- END attachments -->
+	<tr class="row4">
+		<td colspan="4">&nbsp;</td>
+		<td class="small"><a href="#" onclick="marklist('attachments', 'delete', true); return false;">{L_MARK_ALL}</a> :: <a href="#" onclick="marklist('attachments', 'delete', false); return false;">{L_UNMARK_ALL}</a></td>
+	</tr>
+	</tbody>
+	</table>
+
+	<fieldset class="display-options">
+		{L_DISPLAY_LOG}: &nbsp;{S_LIMIT_DAYS}&nbsp;{L_SORT_BY}: {S_SORT_KEY} {S_SORT_DIR}
+		<input class="button2" type="submit" value="{L_GO}" name="sort" />
+		{S_FORM_TOKEN}
+	</fieldset>
+	<hr />
+
+	<!-- IF PAGINATION  or TOTAL_FILES -->
+	<div class="pagination">
+		{L_NUMBER_FILES}: {TOTAL_FILES} &bull; {L_TOTAL_SIZE}: {TOTAL_SIZE}<!-- IF S_ON_PAGE --><!-- IF PAGINATION --> &bull; <a href="#" onclick="jumpto(); return false;" title="{L_JUMP_TO_PAGE}">{S_ON_PAGE}</a> &bull; <span>{PAGINATION}</span><!-- ELSE --> &bull; {S_ON_PAGE}<!-- ENDIF --><!-- ENDIF -->
+	</div>
+	<!-- ENDIF -->
+
+	<br />
+
+	<p class="submit-buttons">
+		<input class="button1" type="submit" id="submit" name="submit" value="{L_SUBMIT}" />&nbsp;
+		<input class="button2" type="reset" id="reset" name="reset" value="{L_RESET}" />
+	</p>
+
+	</fieldset>
+
+	</form>
+
 <!-- ENDIF -->
 
 <!-- INCLUDE overall_footer.html -->
