--- a/phpBB/adm/style/acp_users_avatar.html
+++ b/phpBB/adm/style/acp_users_avatar.html
@@ -5,8 +5,8 @@
 	<!-- IF ERROR --><p class="error">{ERROR}</p><!-- ENDIF -->
 		<dl>
 			<dt><label>{L_CURRENT_IMAGE}:</label><br /><span>{L_AVATAR_EXPLAIN}</span></dt>
-			<dd><!-- IF AVATAR -->{AVATAR}<!-- ELSE --><img src="{T_THEME_PATH}/images/no_avatar.gif" alt="" /><!-- ENDIF --></dd>
-			<!-- IF AVATAR --><dd><input type="submit" name="submit" id="delete" value="{LA_DELETE_AVATAR}" /></dd><!-- ENDIF -->
+			<dd>{AVATAR}</dd>
+			<!-- IF AV_SHOW_DELETE --><dd><input type="submit" name="av_delete" id="av_delete" value="{LA_DELETE_AVATAR}" class="button2" /></dd><!-- ENDIF -->
 		</dl>
 	</fieldset>
 	<!-- BEGIN avatar_drivers -->
@@ -16,8 +16,8 @@
 			{avatar_drivers.OUTPUT}
 		</fieldset>
 		<fieldset class="quick">
-			<input type="reset" value="{L_RESET}" name="reset" class="button2" /> &nbsp;
 			<input type="submit" name="submit_av_{avatar_drivers.DRIVER}" value="{L_SUBMIT}" class="button1" />
 		</fieldset>
 	<!-- END avatar_drivers -->
+	{S_FORM_TOKEN}
 	</form>
