--- a/phpBB/adm/style/acp_users_avatar.html
+++ b/phpBB/adm/style/acp_users_avatar.html
@@ -6,18 +6,52 @@
 		<dl>
 			<dt><label>{L_CURRENT_IMAGE}:</label><br /><span>{L_AVATAR_EXPLAIN}</span></dt>
 			<dd>{AVATAR}</dd>
-			<!-- IF AV_SHOW_DELETE --><dd><input type="submit" name="av_delete" id="av_delete" value="{LA_DELETE_AVATAR}" class="button2" /></dd><!-- ENDIF -->
 		</dl>
 	</fieldset>
-	<!-- BEGIN avatar_drivers -->
-		<fieldset>
-			<legend>{avatar_drivers.L_TITLE}</legend>
-			<p>{avatar_drivers.L_EXPLAIN}</p>
-			{avatar_drivers.OUTPUT}
-		</fieldset>
-		<fieldset class="quick">
-			<input type="submit" name="submit_av_{avatar_drivers.DRIVER}" value="{L_SUBMIT}" class="button1" />
-		</fieldset>
-	<!-- END avatar_drivers -->
+	<fieldset>
+		<legend>{L_AVATAR_SELECT_NEW}</legend>
+		<dl>
+			<dt><label>{L_AVATAR_TYPE}</label></dt>
+			<dd><select name="avatar_driver" id="avatar_driver">
+				<option value="">{L_NO_AVATAR}</option>
+				<!-- BEGIN avatar_drivers -->
+				<option value="{avatar_drivers.DRIVER}"<!-- IF avatar_drivers.SELECTED --> selected="selected"<!-- ENDIF -->>{avatar_drivers.L_TITLE}</option>
+				<!-- END avatar_drivers -->
+			</select></dd>
+		</dl>
+		<div id="av_options">
+		<!-- BEGIN avatar_drivers -->
+			<div id="av_option_{avatar_drivers.DRIVER}">
+				<p>{avatar_drivers.L_EXPLAIN}</p>
+				{avatar_drivers.OUTPUT}
+			</div>
+		<!-- END avatar_drivers -->
+		</div>
+	</fieldset>
+	<script type="text/javascript">
+		// <![CDATA[
+			function avatar_simplify() {
+				var node = document.getElementById('av_options');
+				for (var i = 0; i < node.children.length; i++) {
+					child = node.children[i];
+					child.style.display = 'none';
+				}
+
+				var selected = document.getElementById('avatar_driver').value;
+				var id = 'av_option_' + selected;
+				node = document.getElementById(id);
+				if (node != null) {
+					node.style.display = 'block';
+				}
+			}
+
+			avatar_simplify();
+			document.getElementById('avatar_driver').onchange = avatar_simplify;
+		// ]]>
+	</script>
+
+	<fieldset class="quick">
+		<input type="submit" name="update" value="{L_SUBMIT}" class="button1" />
+	</fieldset>
 	{S_FORM_TOKEN}
 	</form>
