--- a/phpBB/adm/style/acp_avatar_options_local.html
+++ b/phpBB/adm/style/acp_avatar_options_local.html
@@ -8,6 +8,7 @@
 	</select>&nbsp;<input type="submit" value="{L_GO}" name="av_local_go" class="button2" /></dd>
 </dl>
 <dl>
+	<!-- IF AV_LOCAL_SHOW -->
 	<table cellspacing="1">
 	<!-- BEGIN av_local_row -->
 	<tr>
@@ -22,4 +23,5 @@
 	</tr>
 	<!-- END av_local_row -->
 	</table>
+	<!-- ENDIF -->
 </dl>
