[ticket/10155] Add jQuery, introduce global assets path
Add the jQuery JavaScript library to all pages, giving modifications
instant access and allowing for any future core JavaScript to take
advantage of it.

Also introduce a global /assets directory for assets that are shared
between styles.

PHPBB3-10155

--- a/phpBB/adm/style/overall_header.html
+++ b/phpBB/adm/style/overall_header.html
@@ -11,6 +11,7 @@
 
 <link href="style/admin.css" rel="stylesheet" type="text/css" media="screen" />
 
+<script type="text/javascript" src="{T_ASSETS_PATH}/javascript/jquery.js"></script>
 <script type="text/javascript">
 // <![CDATA[
 var jump_page = '{LA_JUMP_PAGE}:';
