--- a/phpBB/adm/style/install_header.html
+++ b/phpBB/adm/style/install_header.html
@@ -11,6 +11,7 @@
 
 <link href="../adm/style/admin.css" rel="stylesheet" type="text/css" media="screen" />
 
+<script type="text/javascript" src="{T_ASSETS_PATH}/javascript/jquery.js"></script>
 <script type="text/javascript">
 // <![CDATA[
 
