--- a/phpBB/adm/style/acp_styles.html
+++ b/phpBB/adm/style/acp_styles.html
@@ -412,7 +412,7 @@
 		</td>
 		<td style="text-align: center;">
 			<!-- IF S_STYLE -->
-				<a href="{installed.U_STYLE_ACT_DEACT}">{installed.L_STYLE_ACT_DEACT}</a> |
+				<a href="{installed.U_STYLE_ACT_DEACT}" data-ajax="style_act_deact">{installed.L_STYLE_ACT_DEACT}</a> |
 			<!-- ENDIF -->
 			{installed.S_ACTIONS}
 			<!-- IF S_STYLE -->
