--- a/phpBB/adm/style/overall_footer.html
+++ b/phpBB/adm/style/overall_footer.html
@@ -22,14 +22,11 @@
 			<div id="darken">&nbsp;</div>
 			<div class="jalert" id="loadingalert"><h3>{L_LOADING}</h3><p>{L_PLEASE_WAIT}</p></div>
 		</div>
-
-		<!-- tmp -->
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
-		<script src="../styles/script.js"></script>
 	</div>
 </div>
 
 <script type="text/javascript" src="{T_ASSETS_PATH}/javascript/jquery.js"></script>
+<script type="text/javascript" src="../styles/script.js"></script>
 
 </body>
 </html>
