[feature/ajax] Moved script.js into a few different files.
Seperated it into: assets/javascript/core.js,
styles/prosilver/template/ajax.js and adm/style/ajax.js.

--- a/phpBB/adm/style/overall_footer.html
+++ b/phpBB/adm/style/overall_footer.html
@@ -26,7 +26,8 @@
 </div>
 
 <script type="text/javascript" src="{T_ASSETS_PATH}/javascript/jquery.js"></script>
-<script type="text/javascript" src="../styles/script.js"></script>
+<script type="text/javascript" src="{T_ASSETS_PATH}/javascript/core.js"></script>
+<script type="text/javascript" src="style/ajax.js"></script>
 
 </body>
 </html>
