disable banning and warning groups

--- a/phpBB/adm/style/acp_groups.html
+++ b/phpBB/adm/style/acp_groups.html
@@ -78,6 +78,16 @@
 		<dt><label for="group_receive_pm">{L_GROUP_RECEIVE_PM}:</label><br /><span>{L_GROUP_RECEIVE_PM_EXPLAIN}</span></dt>
 		<dd><input name="group_receive_pm" type="checkbox" value="1" class="radio" id="group_receive_pm"{GROUP_RECEIVE_PM} /></dd>
 	</dl>
+	<!-- IF USER_GROUPS -->
+	<dl>
+		<dt><label for="group_ban">{L_GROUP_BAN}:</label><br /><span>{L_GROUP_BAN_EXPLAIN}</span></dt>
+		<dd><input name="group_ban" type="checkbox" value="1" class="radio" id="group_ban"{GROUP_BAN} /></dd>
+	</dl>
+	<dl>
+		<dt><label for="group_warn">{L_GROUP_WARN}:</label><br /><span>{L_GROUP_WARN_EXPLAIN}</span></dt>
+		<dd><input name="group_warn" type="checkbox" value="1" class="radio" id="group_warn"{GROUP_WARN} /></dd>
+	</dl>
+	<!-- ENDIF -->
 	</fieldset>
 
 	<fieldset>
