[feature/ajax] Do not hard-code sorting images of acp_forums ordering

--- a/phpBB/adm/style/acp_forums.html
+++ b/phpBB/adm/style/acp_forums.html
@@ -500,6 +500,14 @@
 	</fieldset>
 	</form>
 
+	<div class="hidden">
+		<a class="template-up-img" href="#">{ICON_MOVE_UP}</a>
+		<span class="template-up-img-disabled">{ICON_MOVE_UP_DISABLED}</span>
+
+		<a class="template-down-img" href="#">{ICON_MOVE_DOWN}</a>
+		<span class="template-down-img-disabled">{ICON_MOVE_DOWN_DISABLED}</span>
+	</div>
+
 <!-- ENDIF -->
 
 <!-- INCLUDE overall_footer.html -->
