--- a/phpBB/adm/style/acp_users.html
+++ b/phpBB/adm/style/acp_users.html
@@ -46,7 +46,7 @@
 		<!-- BEGIN queue -->
 			<!-- IF queue.S_ROW_COUNT is even --><tr class="row1"><!-- ELSE --><tr class="row2"><!-- ENDIF -->
 				<td>{queue.USERNAME}</td>
-				<td style="text-align: center;">{queue.DELETE_TYPE_SELECT}</td>
+				<td style="text-align: center;">{queue.DELETE_TYPE}</td>
 				<td style="text-align: center;">{queue.DATE}</td>
 				<td>{queue.DELETE_REASON}</td>
 				<td><input type="checkbox" name="user_delete_ids[]" value="{queue.USER_ID}" /></td>
