--- a/phpBB/adm/style/overall_footer.html
+++ b/phpBB/adm/style/overall_footer.html
@@ -24,11 +24,11 @@
 		</div>
 
 		<div id="phpbb_alert" class="phpbb_alert" data-l-err="{L_ERROR}" data-l-timeout-processing-req="{L_TIMEOUT_PROCESSING_REQ}">
-			<a href="#"><img src="images/alert_close.png" class="alert_close" /></a>
+			<a href="#" class="alert_close"></a>
 			<h3 class="alert_title"></h3><p class="alert_text"></p>
 		</div>
 		<div id="phpbb_confirm" class="phpbb_alert">
-			<a href="#"><img src="images/alert_close.png" class="alert_close" /></a>
+			<a href="#" class="alert_close"></a>
 			<p class="alert_text"></p>
 			<input type="button" class="button1" value="{L_YES}" />&nbsp;
 			<input type="button" class="button2" value="{L_NO}" />
