[feature/events] Add overall_footer_end acp template event
PHPBB3-9550

--- a/phpBB/adm/style/overall_footer.html
+++ b/phpBB/adm/style/overall_footer.html
@@ -40,6 +40,7 @@
 <!-- IF S_JQUERY_FALLBACK --><script type="text/javascript">window.jQuery || document.write(unescape('%3Cscript src="{T_ASSETS_PATH}/javascript/jquery.js" type="text/javascript"%3E%3C/script%3E'));</script><!-- ENDIF -->
 <script type="text/javascript" src="{T_ASSETS_PATH}/javascript/core.js"></script>
 <script type="text/javascript" src="style/ajax.js"></script>
+<!-- EVENT overall_footer_end -->
 
 </body>
 </html>
